no longer overlapping with unprocessed image

--- a/src/components/Canvas/Canvas.css
+++ b/src/components/Canvas/Canvas.css
@@ -16,3 +16,7 @@
     z-index: 1;
     object-fit: contain;
 }
+
+.p5Canvas {
+    display: none;
+}
